--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
   "dependencies": {
     "@mediapipe/drawing_utils": "^0.3.1675466124",
     "@mediapipe/face_detection": "^0.4.1646425229",
+    "@mediapipe/tasks-vision": "^0.10.32",
     "next": "14.2.35",
     "react": "^18",
-    "react-compare-image": "^3.5.14",
+    "react-compare-slider": "^3.1.0",
     "react-dom": "^18"
   },
   "devDependencies": {
