--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "compressly",
-  "version": "0.1.0",
+  "name": "SAKADU",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -12,6 +12,7 @@
     "@mediapipe/drawing_utils": "^0.3.1675466124",
     "@mediapipe/face_detection": "^0.4.1646425229",
     "@mediapipe/tasks-vision": "^0.10.32",
+    "lucide-react": "^0.563.0",
     "next": "14.2.35",
     "react": "^18",
     "react-compare-slider": "^3.1.0",
