--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@mediapipe/tasks-vision": "^0.10.32",
     "lucide-react": "^0.563.0",
     "next": "14.2.35",
+    "pica": "^9.0.1",
     "react": "^18",
     "react-compare-slider": "^3.1.0",
     "react-dom": "^18"
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/pica": "^9.0.5",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
