--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "@mediapipe/drawing_utils": "^0.3.1675466124",
     "@mediapipe/face_detection": "^0.4.1646425229",
     "@mediapipe/tasks-vision": "^0.10.32",
+    "heic2any": "^0.0.4",
     "lucide-react": "^0.563.0",
-    "next": "14.2.35",
+    "next": "^16.1.6",
     "pica": "^9.0.1",
     "react": "^18",
     "react-compare-slider": "^3.1.0",
