--- a/package.json
+++ b/package.json
@@ -11,15 +11,16 @@
   "dependencies": {
     "@mediapipe/drawing_utils": "^0.3.1675466124",
     "@mediapipe/face_detection": "^0.4.1646425229",
-    "heic2any": "^0.0.4",
+    "heic-to": "^1.4.2",
     "lucide-react": "^0.563.0",
-    "next": "^16.1.6",
+    "next": "^15.5.12",
     "pica": "^9.0.1",
-    "react": "^18",
+    "react": "^19.2.4",
     "react-compare-slider": "^3.1.0",
-    "react-dom": "^18"
+    "react-dom": "^19.2.4"
   },
   "devDependencies": {
+    "@types/heic-convert": "^2.1.0",
     "@types/node": "^20",
     "@types/pica": "^9.0.5",
     "@types/react": "^18",
